# mcp-tableau

./: .env.example  .gitignore  AGENTS.md  QUICKSTART.md  README.md  main.py  prompt.md  pyproject.toml
.claude/skills/code-standards/: SKILL.md
.claude/skills/criar-tasks/: SKILL.md
.claude/skills/criar-tasks/references/: TASKS_TEMPLATE.md
.claude/skills/criar-techspec/references/: TEMPLATE.md
.claude/skills/executar-bugfix/: SKILL.md
.claude/skills/executar-qa/: SKILL.md
.claude/skills/executar-task/: SKILL.md
.claude/skills/testing-standards/: SKILL.md
.compozy/: config.toml
.compozy/tasks/save-export-to-file/reviews-001/: issue_001.md
src/mcp_tableau/: __init__.py  config.py  models.py  server.py
src/mcp_tableau/hyper/: __init__.py  db.py  engine.py
src/mcp_tableau/tableau/: __init__.py  client.py  metadata.py
src/mcp_tableau/tools/: __init__.py  _file_writer.py  _validation.py  deploy.py  hyper.py  metadata.py  permissions.py  qa.py  visual.py
src/mcp_tableau/validation/: __init__.py  complexity.py  similarity.py  structure.py  visual.py  volume.py
tasks/prd-enriquecer-saidas-com-ids/: 1_task.md  2_task.md  3_task.md  4_task.md  5_task.md  codereview.md  prd.md  qa.md  tasks.md  techspec.md
tasks/prd-hyper-datasources/: 1_task.md  2_task.md  3_task.md  4_task.md  5_task.md  6_task.md  7_task.md  8_task.md  prd.md  tasks.md  techspec.md
tasks/prd-mcp-tableau/: 1_task.md  2_task.md  3_task.md  4_task.md  5_task.md  6_task.md  7_task.md  8_task.md  9_task.md  bugfixes.md  bugs.md  codereview.md  prd.md  qa.md  tasks.md  techspec.md
test-assets/: Superstore.twbx  sample_data.csv
tests/: conftest.py  test_config.py  test_mcp_integration.py  test_models.py
tests/hyper/: test_db.py  test_engine.py
tests/integration/: test_hyper_real.py  test_tableau_real.py
tests/tableau/: test_client.py  test_client_perm_dispatch.py  test_client_permissions.py  test_metadata.py
tests/tools/: test_deploy.py  test_file_writer.py  test_hyper.py  test_metadata.py  test_permissions.py  test_qa.py  test_validation.py  test_visual.py
tests/validation/: test_complexity.py  test_similarity.py  test_structure.py  test_visual.py  test_volume.py
