[project]
name = "mcp-tableau"
version = "0.1.0"
description = "Servidor MCP para publicação e validação de conteúdo no Tableau"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.2",
    "tableauserverclient>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "tableaudocumentapi>=0.11",
    "Pillow>=11.0",
    "rapidfuzz>=3.10",
]

[project.scripts]
mcp-tableau = "mcp_tableau.server:run"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tableau"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Suite rápida por padrão: exclui integração real e aplica o gate de cobertura ≥80%.
# Rode a integração real sob demanda com `pytest -m integration` (sobrescreve o `-m`).
addopts = "-ra -m 'not integration' --cov=mcp_tableau --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: testes que exigem um Tableau Server/Cloud real (fora da suite rápida)",
]

[tool.coverage.run]
source = ["mcp_tableau"]

[tool.coverage.report]
show_missing = true
